[tool.poetry]
name = "iajobs"
version = "0.1.0"
description = ""
authors = ["quentalt <quentin.altieri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
passlib = "^1.7.4"
transformers = "^4.42.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
